--- a/style.css
+++ b/style.css
@@ -31,3 +31,40 @@
     max-height: 500px; 
     object-fit: cover; 
 }
+
+h1{
+    text-align: center;
+    padding-top: 20px;
+}
+
+h3{
+    text-align: center;
+    font-size: smaller;
+}
+
+h5{
+    color: blue;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+
+h2{
+    text-align: center;
+    padding-top: 20px;
+}
+
+.container{
+    background-color: antiquewhite;
+    padding-bottom: 150px;
+}
+
+.tips-container{
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+}
