--- a/style.css
+++ b/style.css
@@ -31,3 +31,19 @@
     max-height: 500px; 
     object-fit: cover; 
 }
+
+.carousel {
+    margin-bottom: 50px; 
+}
+
+.card {
+    margin: 20px; 
+}
+
+.card-row {
+    justify-content: center; 
+}
+
+.card-body {
+    text-align: center; 
+}
