--- a/style.css
+++ b/style.css
@@ -1,5 +1,18 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 .navbar {
     background-color: #5bc0de; 
+}
+
+body{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Poppins', sans-serif;
 }
 
 .navbar-nav .nav-link {
@@ -87,4 +100,68 @@ h5 {
     margin-left: auto;
     margin-right: auto;
     width: 80%;
+}
+
+header, footer {
+    padding: 10px;
+    text-align: center;
+}
+
+.container-2 {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+.content {
+    display: flex;
+    flex: 1;
+}
+
+.main {
+    flex: 1;
+    padding: 20px;
+}
+
+.sidebar-left,
+.sidebar-right {
+    width: 200px;
+    padding: 0px;
+}
+
+.sidebar-left img,
+.sidebar-right img {
+    width: 100%;
+    height: 100vh;
+    display: block;
+}
+
+.sidebar-left {
+    order: -1; 
+}
+
+footer {
+    text-align: center;
+}
+
+@media (max-width: 768px) {
+    .content {
+        flex-direction: column;
+    }
+
+    .sidebar-left,
+    .sidebar-right {
+        width: 100%;
+        order: 0;
+    }
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+}
+
+table, th, td {
+    border: 1px solid #333;
 }
