--- a/style.css
+++ b/style.css
@@ -54,6 +54,11 @@ body{
     justify-content: center; 
 }
 
+.card-img-top {
+    height: 200px;
+    object-fit: cover;
+}
+
 .card-body {
     text-align: center;
 }
@@ -164,4 +169,11 @@ table {
 
 table, th, td {
     border: 1px solid #333;
+}
+
+#back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
 }
