--- a/style.css
+++ b/style.css
@@ -182,3 +182,10 @@ table, th, td {
     height: 200px;
     object-fit: cover;
 }
+
+.popupads{
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    object-fit: contain;
+}
