--- a/style.css
+++ b/style.css
@@ -189,3 +189,16 @@ table, th, td {
     max-width: 100%;
     object-fit: contain;
 }
+
+.large-image {
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+@media (min-width: 992px) {
+    .large-image {
+        max-width: 120%;
+    }
+}
